# markdown-it-pyrs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  NOTICE  README.md  markdown_it_pyrs.pyi  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml
python/markdown_it_pyrs/: __init__.py  cli.py  markdown_it_pyrs.pyi
src/: lib.rs  nodes.rs
tests/: bench_html.py  bench_packages.py  bench_tree.py  test_api.py  test_basic.py  test_cli.py  test_fixtures.py
tests/fixtures/: ast.md  autolink_ext.md  commonmark_extras.md  commonmark_spec.json  deflist.md  footnote.md  front_matter.md  linkify.md  normalize.md  sourcepos.md  tasklists.md
