[package]
name = "markdown_it_pyrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "markdown_it_pyrs"
crate-type = ["cdylib"]

[dependencies]
markdown-it = "0.5.0"
markdown-it-front-matter = "0.1.0"
pyo3 = "0.19.0"
stacker = "0.1.15"
