[package]
name = "markdown_it_pyrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "markdown_it_pyrs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
markdown-it = "0.5.0"
markdown-it-autolink = "0.1.0"
markdown-it-footnote = "0.1.1"
markdown-it-front-matter = "0.2.0"
markdown-it-heading-anchors = "0.2.0"
markdown-it-tasklist = "0.1.3"
pyo3 = "0.19.0"
stacker = "0.1.15"
