[package]
name = "markdown_it_pyrs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "markdown_it_pyrs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.11.0"
markdown-it = { version = "0.6", default-features = false, features = ["linkify"]}
markdown-it-autolink = "0.2.0"
markdown-it-deflist = "0.3.0"
markdown-it-footnote = "0.2.0"
markdown-it-front-matter = "0.3.0"
markdown-it-heading-anchors = "0.3.0"
markdown-it-tasklist = "0.2.0"
markdown-it-gfm = "0.1.0"
pyo3 = "0.19.2"
stacker = "0.1.15"
